Docs build folder

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -10,51 +10,85 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
-        <div class="portfolio__item mb-5 position-relative">
+        <div class="portfolio__item mb-5 position-relative" data-toggle="modal" data-target="#exampleModal">
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
-            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            <a><i class="fas fa-external-link-alt"></i></a>
           </div>
           <img src="../../assets/img/portfolio/cabin.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
-        <div class="portfolio__item mb-5 position-relative">
+        <div class="portfolio__item mb-5 position-relative" data-toggle="modal" data-target="#exampleModal">
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
-            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            <a><i class="fas fa-external-link-alt"></i></a>
           </div>
           <img src="../../assets/img/portfolio/cake.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
-        <div class="portfolio__item mb-5 position-relative">
+        <div class="portfolio__item mb-5 position-relative" data-toggle="modal" data-target="#exampleModal">
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
-            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            <a><i class="fas fa-external-link-alt"></i></a>
           </div>
           <img src="../../assets/img/portfolio/circus.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
-        <div class="portfolio__item mb-5 position-relative">
+        <div class="portfolio__item mb-5 position-relative" data-toggle="modal" data-target="#exampleModal">
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
-            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            <a><i class="fas fa-external-link-alt"></i></a>
           </div>
           <img src="../../assets/img/portfolio/game.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
-        <div class="portfolio__item mb-5 position-relative">
+        <div class="portfolio__item mb-5 position-relative" data-toggle="modal" data-target="#exampleModal">
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
-            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            <a><i class="fas fa-external-link-alt"></i></a>
           </div>
           <img src="../../assets/img/portfolio/safe.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
-        <div class="portfolio__item mb-5 position-relative">
+        <div class="portfolio__item mb-5 position-relative" data-toggle="modal" data-target="#exampleModal">
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
-            <a href="#"><i class="fas fa-external-link-alt"></i></a>
+            <a><i class="fas fa-external-link-alt"></i></a>
           </div>
           <img src="../../assets/img/portfolio/submarine.png" class="w-100" alt="" />
+        </div>
+      </div>
+    </div>
+    <!-- Modal -->
+    <div class="portfolio-modal modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="portfolioModal2Label" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true"><i class="fas fa-times"></i></span>
+          </button>
+          <div class="modal-body text-center">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-8">
+                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Tasty Cake</h2>
+                  <!-- Icon Divider-->
+                  <div class="divider d-flex justify-content-center align-items-center mt-3 mb-5" data-aos="zoom-in-up">
+                    <span class="left-line mx-3"></span>
+                    <i class="fas fa-star"></i>
+                    <span class="right-line mx-3"></span>
+                  </div>
+                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="" />
+                  <p class="mb-5">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque.
+                    Nam.
+                  </p>
+                  <button class="btn btn-primary" data-dismiss="modal">
+                    <i class="fas fa-times fa-fw"></i>
+                    Close Window
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
