Change assets url

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -14,7 +14,7 @@
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
             <a><i class="fas fa-external-link-alt"></i></a>
           </div>
-          <img src="../../assets/img/portfolio/cabin.png" class="w-100" alt="" />
+          <img src="assets/img/portfolio/cabin.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
@@ -22,7 +22,7 @@
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
             <a><i class="fas fa-external-link-alt"></i></a>
           </div>
-          <img src="../../assets/img/portfolio/cake.png" class="w-100" alt="" />
+          <img src="assets/img/portfolio/cake.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
@@ -30,7 +30,7 @@
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
             <a><i class="fas fa-external-link-alt"></i></a>
           </div>
-          <img src="../../assets/img/portfolio/circus.png" class="w-100" alt="" />
+          <img src="assets/img/portfolio/circus.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
@@ -38,7 +38,7 @@
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
             <a><i class="fas fa-external-link-alt"></i></a>
           </div>
-          <img src="../../assets/img/portfolio/game.png" class="w-100" alt="" />
+          <img src="assets/img/portfolio/game.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
@@ -46,7 +46,7 @@
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
             <a><i class="fas fa-external-link-alt"></i></a>
           </div>
-          <img src="../../assets/img/portfolio/safe.png" class="w-100" alt="" />
+          <img src="assets/img/portfolio/safe.png" class="w-100" alt="" />
         </div>
       </div>
       <div class="col-md-6 col-lg-4" data-aos="flip-left">
@@ -54,7 +54,7 @@
           <div class="portfolio__item__overlay position-absolute d-flex justify-content-center align-items-center">
             <a><i class="fas fa-external-link-alt"></i></a>
           </div>
-          <img src="../../assets/img/portfolio/submarine.png" class="w-100" alt="" />
+          <img src="assets/img/portfolio/submarine.png" class="w-100" alt="" />
         </div>
       </div>
     </div>
